add html review

--- a/week2/review.html
+++ b/week2/review.html
@@ -6,12 +6,16 @@
   </head>
   <body>
     <div class="tweet">
-      <p class="tweet-text">
-        textexttexttexttexttexttexttexttexttextttexttexttextexttexttextttextexttexttexttexttexttexttexttexttextttexttexttextexttexttextt
-      </p>
+      <div id="account"> 
+        <img src="jack.jpg" id="profile-pic"/>
+        <b id="tweet-handle">@jack</b>
+        <p>jack</p>
+     </div>
+      <p class="tweet-text"> just setting up my twttr </p>
       <div class="tweet-footer">
-        <p class="tweet-author">author</p>
-        <p class="tweet-date">date</p>
+        <p class="footer-info">time</p>
+        <p class="footer-info">date</p>
+        <p class="footer-info">TwitterWebClient</p>
       </div>
     </div>
   </body>
