finish review example

--- a/week2/review.html
+++ b/week2/review.html
@@ -8,13 +8,15 @@
     <div class="tweet">
       <div id="account"> 
         <img src="jack.jpg" id="profile-pic"/>
+        <div id="names">
         <b id="tweet-handle">@jack</b>
         <p>jack</p>
+      </div>
      </div>
       <p class="tweet-text"> just setting up my twttr </p>
       <div class="tweet-footer">
-        <p class="footer-info">time</p>
-        <p class="footer-info">date</p>
+        <p class="footer-info">3:50 PM</p>
+        <p class="footer-info">March 21, 2006</p>
         <p class="footer-info">TwitterWebClient</p>
       </div>
     </div>
